ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:
  name: go-url-shortener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: tiny-go.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-url-shortener
                port:
                  number: 9808
